<resources>
    <string name="app_name">Ouze Bank</string>
    <string name="biometric_failed">Fingerprint not recognized</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="default_notification_channel_id">notificacao_padrao</string>
    <string name="novo_codigo">Novo Código</string>
    <string name="problema_codigo">Problemas para receber o código? </string>
    <string name="horarios">Das <b>08:00</b> às <b>22:00</b></string>
    <string name="atualizar_app_dialog">Uma nova versão do app está disponível, deseja atualizar seu aplicativo?</string>
    <string name="codigo_segurança">Insira o código de segurança</string>
    <string name="o_que_e_codigo_segurança">O que é o código de segurança?</string>
    <string name="cancelar_label">Cancelar</string>
    <string name="home_menu_invoice">Minha\nFatura</string>
    <string name="home_menu_profile">Meus\nDados</string>
    <string name="home_menu_goals">Metas</string>
    <string name="home_menu_activate_card">Ativar\nCartão</string>
    <string name="home_menu_temporary_block">Bloqueio\nTemporário</string>
    <string name="home_menu_unblock_card">Desbloquear\nCartão</string>
    <string name="home_menu_passwords">Minhas\nSenhas</string>
    <string name="home_menu_assist">Seguros e Assistências</string>
    <string name="home_menu_contract">Contrato</string>
    <string name="home_menu_exit">Sair</string>
    <string name="foto_title">Enquadre seu rosto na moldura\n para tirar a selfie.</string>
    <string name="valor_mock">R$ 2.660</string>
    <string name="entrar_label">Entrar</string>
    <string name="sou_visa_label">Sou Ouze visa</string>
    <string name="quero_calcard_label">Migrar para Ouze VISA</string>
    <string name="avancar_label">Avançar</string>
    <string name="cpf_label">CPF</string>
    <string name="foto_text">Por questões de segurança,\n precisamos que você faça uma selfie.</string>
    <string name="ja_e_cliente_calcard_text">Já é cliente Calcard mas ainda não tem \n o seu Ouze Visa?</string>
    <string name="digite_cpf_text">Digite seu CPF para iniciarmos</string>
    <string name="erro_migracao_visa_text">Parece que você ainda não pode fazer a migração para o Ouze Visa</string>
    <string name="tirar_foto_label">Abrir câmera</string>
    <string name="migracao_aprovada_text">Sua migração foi aprovada!</string>
    <string name="aprovacao_limite_title">Aprovação de limite</string>
    <string name="limite_atual_text">Limite anterior</string>
    <string name="limite_visa_text">Limite Visa: </string>
    <string name="recusar_label">Recusar</string>
    <string name="sim_label">Sim</string>
    <string name="nao_label">Não</string>
    <string name="aceitar_label">Aceitar</string>
    <string name="digite_sms_text">DIGITE SEU CÓDIGO</string>
    <string name="codigo_verificacao_text">Código de verificação</string>
    <string name="sms_codigo_text">Um código de confirmação \n foi enviado por SMS para (51) 98261 4017</string>
    <string name="tudo_certo_verificacao_title">TUDO CERTO COM SUA MIGRAÇÃO</string>
    <string name="concluir_label">Concluir</string>
    <string name="parabens_label">Parabéns</string>
    <string name="aprovacao_text">Aprovação</string>
    <string name="atencao_label">Atenção!</string>
    <string name="aprovacao_limite_text">Aprovação de limite</string>
    <string name="ops_title">Ops!</string>
    <string name="ops_limite_text">Atenção! Ao recusar seu limite aprovado, seu\n processo de migração para o cartão\n Ouze VISA será cancelado. Deseja\n continuar com o cancelamento?</string>
    <string name="ops_conta_text">Ops! Parece que você ainda não tem uma\n conta Calcard. Vá em uma de nossas\n lojas e crie sua conta.</string>
    <string name="ops_migracao_text">Ops! No momento a migração não está disponível para sua conta. Em breve, tente novamente.</string>
    <string name="tudo_certo_verificacao_text">Sua trasformação para Ouze Visa foi \n um sucesso! Agora você deve escolher \n como quer receber o seu cartão</string>
    <string name="parabens_text">Agora você é cliente Ouze Visa!\n Retire seu novo cartão em uma \n de nossas lojas.</string>
    <string name="tudo_certo_cartao_local_text">Como você quer receber o seu cartão?</string>
    <string name="tudo_certo_retirar_casa_label">Quero receber em casa</string>
    <string name="tudo_certo_retirar_loja_label">Quero retirar na casa</string>
    <string name="entrega_endereco_title">ENDEREÇO DE ENTREGA</string>
    <string name="entrega_endereco_warning">Existe um edereço cadastrado</string>
    <string name="entrega_endereco_text">R. Lauro Linhares, 657 – Bairro \n Trindade, Florianópolis - SC, \n CEP - 88036-001</string>
    <string name="entrega_endereco_este_label">Receber neste endereço</string>
    <string name="entrega_endereco_outro_label">Receber em outro endereço</string>
    <string name="busca_endereco_cep_title">ENDEREÇO DE ENTREGA</string>
    <string name="digite_cep_text">Digite o CEP do endereço</string>
    <string name="logradouro_text">Logradouro</string>
    <string name="numero_text">Número</string>
    <string name="complemento_text">Complemento</string>
    <string name="bairro_text">Bairro</string>
    <string name="tudo_certo_migracao_titel">TUDO CERTO COM SUA MIGRAÇÕA</string>
    <string name="tudo_certo_migracao_text">Tudo pronto! \n Agora basta aguardar a chegada do cartão \n no endereço informado</string>
    <string name="sair_label">Sair</string>
    <string name="rastrear_cartao_label">Rastrear meu cartão</string>
    <string name="fechar_label">Fechar</string>
    <string name="cartao_a_caminho_text">SEU CARTÃO ESTÁ A CAMINHO</string>
    <string name="retirar_cartao_loja_text">VOCÊ DEVE RETIRAR SEU CARTÃO NA LOJA MAIS PRÓXIMA</string>
    <string name="tentar_novamente_migracao_title">Você pode tentar a migração\n novamente em 60 dias.</string>
    <string name="lista_lojas_encontradas">LOJAS ENCONTRADAS</string>
    <string name="buscar_novamente_label">Buscar novamente</string>
    <string name="ver_todas_lojas_label">Ver todas as lojas</string>
    <string name="ver_no_mapa_link">VER NO MAPA</string>
    <string name="foto_ficou_boa_text">Você gostaria de usar\n esta foto no cadastro?</string>
    <string name="ja_sou_calcard_label">Já sou Ouze Visa</string>
    <string name="continuar_label">Continuar</string>
    <string name="imagem_de_alerta">imagem de alerta</string>
    <string name="insira_sua_senha_text">Insira sua senha</string>
    <string name="senha_title">Senha</string>
    <string name="cadastre_sua_senha_text">Cadastre uma senha com 4 dígitos\n para seu cartão Ouze VISA</string>
    <string name="confirmar_senha_text">Confirmar Senha</string>
    <string name="bot_o_para_tirar_foto_label">Botão para tirar foto</string>
    <string name="rs_cash_text">R$</string>
    <string name="seu_novo_limite_visa">Novo limite</string>
    <string name="novo_codigo_text">Novo código</string>
    <string name="insira_seu_cpf_text">Digite seu CPF</string>
    <string name="nao_possui_calcard_text">Você ainda não é cliente. Vá até uma loja Studio Z e solicite o seu cartão Ouze. Sujeito a análise de crédito.</string>
    <string name="RegistrationMiddleWare_text">Você já é cliente, porém não possui uma conta no app. Clique em avançar para realizar o cadastro.</string>
    <string name="concluido_label">concluído</string>
    <string name="fatura_em_processamento_text">Fatura em processamento</string>
    <string name="seguros_toolbar_text">Seguros e Assistências</string>
    <string name="ver_planos_label">ver planos</string>
    <string name="parece_que_voc_ainda_n_o_tem_nenhum_seguro_contratado_text">Parece que você ainda não tem nenhum\n seguro contratado.</string>
    <string name="veja_nossos_planos_text">Veja nossos planos:</string>
    <string name="contratacao_title">Contratação</string>
    <string name="voce_quer_beneficiario_text">Você quer apontar beneficiários?</string>
    <string name="hiring_insurance_text_true">Você precisa adicionar pelo\n menos um(a) beneficiário(a).</string>
    <string name="adicionar_beneficiario_link">Adicionar beneficiário(a)</string>
    <string name="confirmar_sua_senha_text">Confirme a sua senha</string>
    <string name="parentesco_label">Parentesco:</string>
    <string name="porcentagem_label">Porcentagem: </string>
    <string name="voc_contratou_o_seguro_de_vida_com_sucesso">Você contratou o Seguro de Vida\n com sucesso!</string>
    <string name="voltar_para_inicio_label">voltar para o início</string>
    <string name="informe_os_dados_do_beneficiario_title">Informe os dados do beneficiário</string>
    <string name="nome_do_benefici_rio">Nome do beneficiário</string>
    <string name="check_password_insurance_text">Para realizar a contratação, insira a sua\n senha do cartão.</string>
    <string name="contratar_label">contratar</string>
    <string name="porcentagem">Porcentagem</string>
    <string name="salvar">salvar</string>
    <string name="detalhes_do_seguro_text">Detalhes do seguro</string>
    <string name="concordo_com_as_condi_es_de_contrata_o_de_assistencia">Concordo com as condições de\ncontratação de assistência acima.</string>
    <string name="voce_esta_contratando_o_text">Você está contratando o</string>
    <string name="baixar_contrato_link">Baixar contrato</string>
    <string name="detalhes_do_veiculo_text">Detalhes do veículo</string>
    <string name="preenchimento_obrigatrio_text">*Preenchimento obrigatório</string>
    <string name="marca_hint">Marca*</string>
    <string name="modelo_hint">Modelo*</string>
    <string name="placa_hint">Placa*</string>
    <string name="ano_de_fabricacao_hint">Ano de fabricação*</string>
    <string name="ano_do_modelo_hint">Ano do modelo*</string>
    <string name="cor_predominante_hint">Cor predominante</string>
    <string name="numero_de_chassi_hint">Número de chassi</string>
    <string name="cancelar_plano_label">Cancelar plano</string>
    <string name="cancelamento_de_plano_title">Cancelamento de plano</string>
    <string name="cancelamento_plano_text">Você tem certeza que deseja fazer o\n cancelamento de seu plano?</string>
    <string name="sim_quero_cancelar_link">SIM, QUERO CANCELAR</string>
    <string name="nao_quero_cancelar_label">Não quero cancelar</string>
    <string name="meus_planos_title">Meus planos</string>
    <string name="detalhes_title">Detalhes</string>
    <string name="digite_sms_title">Digite o código enviado por SMS</string>
    <string name="nao_recebi_sms_link">Não recebi o SMS</string>
    <string name="contratar_planos_label">contratar planos</string>
    <string name="meus_planos">Planos disponíveis</string>
    <string name="voc_paga_por_mes">Você paga por mês -</string>
    <string name="benef_cios">Benefícios</string>
    <string name="crie_uma_senha_com_4_d_gitos">Cadastre uma senha com 4 dígitos</string>
    <string name="crie_uma_senha_para_o_aplicativo">Cadastre uma senha para o aplicativo</string>
    <string name="ouzar_ter_uma_nvida_financeira_nequilibrada">Ouzar é ter uma\nvida financeira\nequilibrada</string>
    <string name="ouzadia_numa_tend_ncia">Ouzadia é\numa tendência!</string>
    <string name="tirar_outra_label">Tirar outra</string>
    <string name="usar_esta_label">Usar esta</string>
    <string name="analisando_selfie_text">Analisando selfie</string>
    <string name="ok_entendi">Ok, entendi!</string>
    <string name="o_c_digo_de_seguran_a_n_localizado_no_verso_n_do_seu_cart_o_e_tem_3_d_gitos">O código de segurança é\n localizado no verso\n do seu cartão e tem 3 dígitos.</string>
    <string name="o_que_o_c_digo_n_de_seguran_a">O que é o código \n de segurança?</string>
</resources>