<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cancelamento_de_plano_title"
        android:textAlignment="center"
        android:textSize="19sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cancel_insurance_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cancel_insurance_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/cancelamento_plano_text"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/cancel_insurance_view" />

    <TextView
        android:id="@+id/cancel_insurance_dialog_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/sim_quero_cancelar_link"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/cancel_insurance_sub" />

    <Button
        android:id="@+id/cancel_insurance_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_squared_orange"
        android:text="@string/nao_quero_cancelar_label"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/cancel_insurance_dialog_link" />

</androidx.constraintlayout.widget.ConstraintLayout>