<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cvv_card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/o_que_o_c_digo_n_de_seguran_a"
        android:textAlignment="center"
        android:textColor="@color/preto"
        android:textSize="19sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cvv_card_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:src="@drawable/cvv_card"
        app:layout_constraintTop_toBottomOf="@+id/cvv_card_title" />

    <TextView
        android:id="@+id/cvv_card_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins"
        android:text="@string/o_c_digo_de_seguran_a_n_localizado_no_verso_n_do_seu_cart_o_e_tem_3_d_gitos"
        android:textAlignment="center"
        android:textColor="@color/preto"
        android:textSize="19sp" />

    <Button
        android:id="@+id/cvv_card_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_orange"
        android:text="@string/ok_entendi"
        android:textColor="@android:color/white" />

</LinearLayout>