<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/informe_os_dados_do_beneficiario_title"
        android:textAlignment="center"
        android:textSize="19sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/insurance_beneficiary_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/insurance_beneficiary_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/insurance_beneficiary_percentage_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insurance_beneficiary_view">

        <EditText
            android:id="@+id/insurance_beneficiary_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:maxLength="50"
            android:hint="@string/nome_do_benefici_rio"
            android:singleLine="true"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/insurance_beneficiary_percentage_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insurance_beneficiary_input">

        <EditText
            android:id="@+id/insurance_beneficiary_percentage_input_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/porcentagem"
            android:inputType="number"
            android:maxLength="3"
            android:singleLine="true"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/insurance_beneficiary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:background="@drawable/btn_squared_orange"
        android:text="@string/salvar"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/insurance_beneficiary_input" />

</androidx.constraintlayout.widget.ConstraintLayout>